        - Updated the SnapPea kernel to the one shipped with SnapPy 3.0.3.
        - All global enumerations are now C++11 scoped enumerations, with the
          old names kept as deprecated constants in the regina:: namespace.
        - Several build dependencies are gone: Jansson, Popt, CppUnit.
          See the individual sections below for details.
    ENGINE:
        Class AbelianGroup:
            - New routine hash(), which uses the tight encoding.
        Enum Algorithm:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., ALG_BACKTRACK) have been
              renamed as scoped enum values (e.g., Algorithm::Backtrack).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class AngleStructure:
            - The vector constructors are now templated, so that you can pass a
              vector of some type other than regina::Integer.
        Class AngleStructures:
            - New routine sort().
        Enum Attachment::OwnershipPolicy:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., OWN_MALLOC) have been
              renamed as scoped enum values (e.g., OwnershipPolicy::OwnMalloc).
              The old names have been kept as deprecated compile-time constants
              in the Attachment class.
        Enum BagComparison:
            - This is now a scoped enumeration, for better type safety.
              The old enum constants (e.g., BAG_EQUAL) have been
              renamed as scoped enum values (e.g., BagComparison::Equal).
              The old names have been kept as deprecated compile-time constants
              in the regina:: namespace.
        Class BitManipulator<T>:
            - New routine swapBits().
        Class BoolSet:
            - New routine full().